BF-902: cover runtime-data refresh execution path